plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'MurinoFM'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Основные стартеры
    implementation 'org.springframework.boot:spring-boot-starter-web'      // Для контроллеров
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // Для репозиториев

    // База данных
    runtimeOnly 'com.h2database:h2'

    // Lombok (чтобы работали аннотации @Getter, @RequiredArgsConstructor)
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Тесты
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
